@@ -1,12 +1,12 @@
 SRCDIR=src
-OBJS=$(SRCDIR)/bnagen_main.o $(SRCDIR)/drawthemap.o $(SRCDIR)/loader.o $(SRCDIR)/maskgen.o $(SRCDIR)/params.o
+OBJS=$(SRCDIR)/bnagen_main.o $(SRCDIR)/drawthemap.o $(SRCDIR)/loader.o $(SRCDIR)/params.o
 
 bin_path=/usr/bin
 share_path=/usr/share/bnagen
 
 CC=gcc
 LDFLAGS=-ldl -lm -pthread
-LIBS=-lSDL -lSDLmain -lSDL_image -lSDL_ttf
+LIBS=-lSDL -lSDLmain -lSDL_image -lSDL_ttf -lSDL_gfx
 CFLAGS=-s -O2 -Wall -DSHARE_DIR='"$(share_path)/"'
 
 executable=bnagen
