@@ -13,3 +13,4 @@
 
 	- Add 'deadzone' feature
 	- Add ability to interrupt bnagen while cooking
+	- Remove obsolete maskgen module
